2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ISession.cs:
	  Just a code formatting fix.

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Utils.cs:
	  Fixed a typo from the previous revision.

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Utils.cs:
	  Fixed a .NET compatibility bug.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Password.cs:
	* Bang# Common.csproj:
	* CreatePlayerData.cs:
	* CreateSessionData.cs:
	* CreateSpectatorData.cs:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* Utils.cs:
	* AssemblyInfo.cs:
	  

	* Interfaces/IGame.cs:
	  Remove the Bang.IGame.RequestType property.

	* Interfaces/IPrivatePlayerView.cs:
	  Add new Bang.IPrivatePlayerView.RequestType property

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* Utils.cs:
	* AssemblyInfo.cs:
	  

	* Interfaces/IEventListener.cs:
	* Interfaces/IPlayerEventListener.cs:
	  The OnNewRequest event moved to IPlayerEventListener and is
	  now fired only for the requested player.
	Added a new OnPlayerUsedAbility event with target player.
	The OnPlayerUsedAbility events now also inform about the
	  character whose ability was used.

2011-09-20  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Structs/Password.cs:
	  Fixed a very important bug in the password hash generation
	  algorithm.

2011-09-20  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ImmortalMarshalByRefObject.cs:
	  Changed the Bang.ImmortalMarshalByRefObject.Disconnect()
	  method to virtual.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Common.csproj:
	  

	* Enums/RequestType.cs:
	* Interfaces/IPlayer.cs:
	* Interfaces/IPlayerControl.cs:
	* Interfaces/IEventListener.cs:
	* Interfaces/IPublicPlayerView.cs:
	* Exceptions/BadCharacterTypeException.cs:
	  Added new base for "proxy characters" (like Vera Custer,